# my-langchain

./: .gitignore  README.md
2.usingChain/: README.md  demo_generated_key.py  demo_passthrough.py  main.py  main_lcel.py  main_simple.py  pyproject.toml  simple_runnable.py
3.memory_management/: .env_template  README.md  demo_builtin_options.py  demo_config_explained.py  demo_correct_summary_timing.py  demo_file_autosave_internals.py  demo_file_persistence_comparison.py  demo_hidden_connection.py  demo_placeholder_detailed.py  demo_session_flow.py  demo_summary_memory_comparison.py  demo_when_saving_happens_in_chain.py  main.py  main_with_file_persistence.py  main_with_summary_lcel.py  main_with_summary_memory.py  pyproject.toml  test_memory.py
4. context_with_embedding/: README.md  main.py  pyproject.toml
4.context_with_embedding/: .env_template  .gitignore  README.md  main.py  prompt.py  prompt_generic_retriever.py  pyproject.toml  redundant_filter_retriever.py  redundant_filter_retriever_generic.py  scores.ipynb  search_similarity.py  store_embeddings.py  store_embeddings_chroma_cloud.py  vectorstore_examples.py
my-first-langchain/: README.md  main.py  pyproject.toml
